<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SettingsLayout">
    <LinearLayout
        style="@style/StandartHorizontalLayout"
        android:padding="0dp">
        <Button
            android:id="@+id/button_left"
            style="@style/SettingsButton"
            app:icon="@drawable/left"
            app:iconTint="@color/black"/>

        <TextView
            style="@style/SettingsText"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textSize="@dimen/text_size_big"
            android:padding="@dimen/button_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <TextView
                style="@style/SettingsText"
                android:text="@string/night_theme"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/SettingsSwitch"
                 />
        </LinearLayout>
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <TextView
                style="@style/SettingsText"
                android:text="@string/share_link" />
            <Button
                android:id="@+id/button_share"
                style="@style/SettingsButton"
                app:icon="@drawable/share"/>
        </LinearLayout>
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <TextView
                style="@style/SettingsText"
                android:text="@string/support" />
            <Button
                android:id="@+id/button_support"
                style="@style/SettingsButton"
                app:icon="@drawable/support" />
        </LinearLayout>
        <LinearLayout
            style="@style/StandartHorizontalLayout">
            <TextView
                style="@style/SettingsText"
                android:text="@string/legal" />
            <Button
                android:id="@+id/button_legal"
                style="@style/SettingsButton"
                app:cornerRadius="0dp"
                app:icon="@drawable/right"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>